--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sankeertan App",
+  "name": "Chanting and singing together with authentic lyrics from our vedic& sanaatana dharma treasurehouse",
   "icons": [
     {
       "src": "favicon.ico",
